--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -244,7 +244,7 @@
                         }
                         @foreach (var item in ticketAttachment)
                         {
-                        <div class="col-sm-2">
+                        <div class="col-2">
                             <div class="card">
                                 <div class="file">
                                     <a asp-controller="ProjectAttachments" asp-action="Details" asp-route-id="@item.Id">
