--- a/Views/Projects/ManagerUserProject.cshtml
+++ b/Views/Projects/ManagerUserProject.cshtml
@@ -5,124 +5,131 @@
 
 <br />
 <br />
-<br />
 <div class="container-fluid" style="padding-left:10%;padding-right:10%;">
     <div class="shadow-lg p-3 mb-5 bg-white rounded">
-        <h1>Manager User Project</h1>
-        <hr />
-        <form asp-controller="Projects" asp-action="ManagerUserProject" method="post">
-
-
-            <div class="row">
-                <div class="col p-3">
-                    <div class="row">
-                        <div class="col">
-                            Project
-                        </div>
-
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-header bg-dark">
+                        <h3 class="card-title">Manager User Project</h3>
                     </div>
-                    <div class="row">
-                        <div class="col">
-                            <div class="form-group">
-                                <select class="form-control  select2bs4" style="width: 100%;" name="ProjectId" asp-items="@ViewBag.ProjectId"></select>
-                                @*<select class="form-control select2bs4" style="width: 100%;"></select>*@
-                            </div>
-                           
-
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col  p-3">
-                    <div class="row">
-                        <div class="col">
-                            Project Manager
-                        </div>
-
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <div class="form-group">
-                                <select class="form-control select2bs4" style="width: 100%;" name="ProjectManagerId" asp-items="@ViewBag.ProjectManagerId"></select>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="row">
-                <div class="col p-3">
-                    <div class="row">
-                        <div class="col">
-                            Developers
-                        </div>
-
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            @*<select class="form-control" size="15" multiple="multiple" name="DevelopersId" asp-items="@ViewBag.DevelopersId"></select>*@
-                            <div class="card card-default">
-                                <div class="card-body" style="padding:0;">
+                    <div class="card-body">
+                        <form asp-controller="Projects" asp-action="ManagerUserProject" method="post">
+                            <div class="row">
+                                <div class="col p-3">
                                     <div class="row">
-                                        <div class="col-12">
-                                            <div class="form-group">
-                                           
-                                                <select class="duallistbox" size="15" multiple="multiple" name="DevelopersId" asp-items="@ViewBag.DevelopersId"></select>
-                                            </div>
-                                            <!-- /.form-group -->
+                                        <div class="col">
+                                            Project
                                         </div>
-                                        <!-- /.col -->
+
                                     </div>
-                                    <!-- /.row -->
-                                </div>
-                                <!-- /.card-body -->
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col p-3">
-                    <div class="row">
-                        <div class="col">
-                            Submitters
-                        </div>
-
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            @*<select class="form-control" size="15" multiple="multiple" name="SubmittersId" asp-items="@ViewBag.SubmittersId"></select>*@
-                            <div class="card card-default">
-                                <div class="card-body" style="padding:0;">
                                     <div class="row">
-                                        <div class="col-12">
+                                        <div class="col">
                                             <div class="form-group">
-                                               
-                                                <select class="duallistbox" size="15" multiple="multiple" name="SubmittersId" asp-items="@ViewBag.SubmittersId"></select>
+                                                <select class="form-control  select2bs4" style="width: 100%;" name="ProjectId" asp-items="@ViewBag.ProjectId"></select>
+                                                @*<select class="form-control select2bs4" style="width: 100%;"></select>*@
                                             </div>
-                                            <!-- /.form-group -->
-                                        </div>
-                                        <!-- /.col -->
-                                    </div>
-                                    <!-- /.row -->
-                                </div>
-                                <!-- /.card-body -->
-                            </div>
-                        </div>
 
+
+                                        </div>
+
+                                    </div>
+                                </div>
+                                <div class="col  p-3">
+                                    <div class="row">
+                                        <div class="col">
+                                            Project Manager
+                                        </div>
+
+                                    </div>
+                                    <div class="row">
+                                        <div class="col">
+                                            <div class="form-group">
+                                                <select class="form-control select2bs4" style="width: 100%;" name="ProjectManagerId" asp-items="@ViewBag.ProjectManagerId"></select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="row">
+                                <div class="col p-3">
+                                    <div class="row">
+                                        <div class="col">
+                                            Developers
+                                        </div>
+
+                                    </div>
+                                    <div class="row">
+                                        <div class="col">
+                                            @*<select class="form-control" size="15" multiple="multiple" name="DevelopersId" asp-items="@ViewBag.DevelopersId"></select>*@
+                                            <div class="card card-default">
+                                                <div class="card-body" style="padding:0;">
+                                                    <div class="row">
+                                                        <div class="col-12">
+                                                            <div class="form-group">
+
+                                                                <select class="duallistbox" size="15" multiple="multiple" name="DevelopersId" asp-items="@ViewBag.DevelopersId"></select>
+                                                            </div>
+                                                            <!-- /.form-group -->
+                                                        </div>
+                                                        <!-- /.col -->
+                                                    </div>
+                                                    <!-- /.row -->
+                                                </div>
+                                                <!-- /.card-body -->
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                                <div class="col p-3">
+                                    <div class="row">
+                                        <div class="col">
+                                            Submitters
+                                        </div>
+
+                                    </div>
+                                    <div class="row">
+                                        <div class="col">
+                                            @*<select class="form-control" size="15" multiple="multiple" name="SubmittersId" asp-items="@ViewBag.SubmittersId"></select>*@
+                                            <div class="card card-default">
+                                                <div class="card-body" style="padding:0;">
+                                                    <div class="row">
+                                                        <div class="col-12">
+                                                            <div class="form-group">
+
+                                                                <select class="duallistbox" size="15" multiple="multiple" name="SubmittersId" asp-items="@ViewBag.SubmittersId"></select>
+                                                            </div>
+                                                            <!-- /.form-group -->
+                                                        </div>
+                                                        <!-- /.col -->
+                                                    </div>
+                                                    <!-- /.row -->
+                                                </div>
+                                                <!-- /.card-body -->
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col text-center">
+                                    <input type="submit" class="btn btn-secondary" value="         Save         " />
+                                    <a asp-controller="Projects" asp-action="ManagerUserProject" class="btn btn-secondary">Cancel</a>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col text-center">
-                    <input type="submit" class="btn btn-secondary" value="         Save         " />
-                    <a asp-controller="Projects" asp-action="ManagerUserProject" class="btn btn-secondary">Cancel</a>
-                </div>
-            </div>
-        </form>
+        </div>
+    
+       
     </div>
 </div>
 
 <div class="form-group">
 
-    <select class="form-control select2bs4" style="width: 100%;"></select>
 </div>
