--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -27,7 +27,7 @@
                             </div>
                             <div class="form-group">
                                 <label class="control-label">Company</label>
-                                <select name="CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
+                                <select name="CompanyId" class="form-control" asp-items="@ViewBag.CompanyId"></select>
                             </div>
                             <div class="form-group">
                                 <label class="control-label">Upload Image</label>
