--- a/Views/Replies/Create.cshtml
+++ b/Views/Replies/Create.cshtml
@@ -1,18 +1,17 @@
-﻿@model BugTracker.Models.Inbox
+﻿@model BugTracker.Models.Reply
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
 }
 
-<h1>Edit</h1>
+<h1>Create</h1>
 
-<h4>Inbox</h4>
+<h4>Reply</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Message" class="control-label"></label>
                 <input asp-for="Message" class="form-control" />
@@ -30,26 +29,28 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsSeenBySender" /> @Html.DisplayNameFor(model => model.IsSeenBySender)
+                    <input class="form-check-input" asp-for="IsSeen" /> @Html.DisplayNameFor(model => model.IsSeen)
                 </label>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsSeenByReceiver" /> @Html.DisplayNameFor(model => model.IsSeenByReceiver)
+                    <input class="form-check-input" asp-for="IsDeleted" /> @Html.DisplayNameFor(model => model.IsDeleted)
                 </label>
             </div>
             <div class="form-group">
                 <label asp-for="SenderId" class="control-label"></label>
-                <select asp-for="SenderId" class="form-control" asp-items="ViewBag.SenderId"></select>
-                <span asp-validation-for="SenderId" class="text-danger"></span>
+                <select asp-for="SenderId" class ="form-control" asp-items="ViewBag.SenderId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="ReceiverId" class="control-label"></label>
-                <select asp-for="ReceiverId" class="form-control" asp-items="ViewBag.ReceiverId"></select>
-                <span asp-validation-for="ReceiverId" class="text-danger"></span>
+                <select asp-for="ReceiverId" class ="form-control" asp-items="ViewBag.ReceiverId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label asp-for="InboxId" class="control-label"></label>
+                <select asp-for="InboxId" class ="form-control" asp-items="ViewBag.InboxId"></select>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
