--- a/Views/Replies/Delete.cshtml
+++ b/Views/Replies/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BugTracker.Models.Inbox
+﻿@model BugTracker.Models.Reply
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,51 +8,57 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Inbox</h4>
+    <h4>Reply</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Message)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Message)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Created)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Created)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Subject)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Subject)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.IsSeenBySender)
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IsSeen)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IsSeenBySender)
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IsSeen)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.IsSeenByReceiver)
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IsDeleted)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IsSeenByReceiver)
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IsDeleted)
         </dd>
-        <dt class="col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Sender)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Sender.Id)
-        </dd>
-        <dt class="col-sm-2">
+        </dd class>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Receiver)
         </dt>
-        <dd class="col-sm-10">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Receiver.Id)
-        </dd>
+        </dd class>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Inbox)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Inbox.Id)
+        </dd class>
     </dl>
     
     <form asp-action="Delete">
