--- a/Views/Replies/Edit.cshtml
+++ b/Views/Replies/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model BugTracker.Models.Inbox
+﻿@model BugTracker.Models.Reply
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,7 +6,7 @@
 
 <h1>Edit</h1>
 
-<h4>Inbox</h4>
+<h4>Reply</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -30,12 +30,12 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsSeenBySender" /> @Html.DisplayNameFor(model => model.IsSeenBySender)
+                    <input class="form-check-input" asp-for="IsSeen" /> @Html.DisplayNameFor(model => model.IsSeen)
                 </label>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsSeenByReceiver" /> @Html.DisplayNameFor(model => model.IsSeenByReceiver)
+                    <input class="form-check-input" asp-for="IsDeleted" /> @Html.DisplayNameFor(model => model.IsDeleted)
                 </label>
             </div>
             <div class="form-group">
@@ -47,6 +47,11 @@
                 <label asp-for="ReceiverId" class="control-label"></label>
                 <select asp-for="ReceiverId" class="form-control" asp-items="ViewBag.ReceiverId"></select>
                 <span asp-validation-for="ReceiverId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="InboxId" class="control-label"></label>
+                <select asp-for="InboxId" class="form-control" asp-items="ViewBag.InboxId"></select>
+                <span asp-validation-for="InboxId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
