update inbox system and manage account lay out

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -30,8 +30,7 @@
 
 }
 <div class="container-fluid">
-    <br />
-    <div class="row">
+    <div class="row mt-2">
 
 
         @if (role.ToList().Contains("Admin") || role.ToList().Contains("ProjectManager"))
