--- a/Views/Inboxes/Delete.cshtml
+++ b/Views/Inboxes/Delete.cshtml
@@ -30,17 +30,12 @@
             @Html.DisplayFor(model => model.Subject)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.IsSeenBySender)
+            @Html.DisplayNameFor(model => model.IsSeen)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IsSeenBySender)
+            @Html.DisplayFor(model => model.IsSeen)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.IsSeenByReceiver)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IsSeenByReceiver)
-        </dd>
+       
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Sender)
         </dt>
