--- a/Views/Inboxes/Edit.cshtml
+++ b/Views/Inboxes/Edit.cshtml
@@ -30,14 +30,10 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsSeenBySender" /> @Html.DisplayNameFor(model => model.IsSeenBySender)
+                    <input class="form-check-input" asp-for="IsSeen" /> @Html.DisplayNameFor(model => model.IsSeen)
                 </label>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsSeenByReceiver" /> @Html.DisplayNameFor(model => model.IsSeenByReceiver)
-                </label>
-            </div>
+
             <div class="form-group">
                 <label asp-for="SenderId" class="control-label"></label>
                 <select asp-for="SenderId" class="form-control" asp-items="ViewBag.SenderId"></select>
