--- a/Views/Inboxes/ReaderDetails.cshtml
+++ b/Views/Inboxes/ReaderDetails.cshtml
@@ -100,6 +100,50 @@
                                 <!-- /.card-footer -->
                             </div>
                             <!-- /.card -->
+                            @{
+                                var reply = Model.Replies.OrderByDescending(c => c.Created).ToList();
+                            }
+                            @foreach (var item in reply)
+                            {
+                                <div class="card card-primary card-outline">
+                                    <div class="card-header">
+                                        <h3 class="card-title">Reply</h3>
+                                    </div>
+                                    <!-- /.card-header -->
+                                    <div class="card-body p-0">
+                                        <div class="mailbox-read-info">
+                                            <h5>Subject: @item.Subject</h5>
+                                            <h6>
+                                                From:  @((await userManager.FindByIdAsync(item.SenderId)).FullName) - Email: @((await userManager.FindByIdAsync(item.SenderId)).Email)
+                                                <span class="mailbox-read-time float-right">Sent on: @item.Created</span>
+                                            </h6>
+                                        </div>
+
+                                        <!-- /.mailbox-controls -->
+                                        <div class="mailbox-read-message">
+                                            @Html.Raw(item.Message)
+                                            <br /><br />
+                                        </div>
+                                        <!-- /.mailbox-read-message -->
+                                    </div>
+                                    <!-- /.card-body -->
+                                    <!-- /.card-footer -->
+                                    <div class="card-footer">
+
+                                        <div class="row">
+
+                                            <form asp-controller="Inboxes" asp-action="reply" method="get">
+                                                <input type="hidden" name="senderId" value="@Model.SenderId" />
+                                                <button type="submit" class="btn btn-default mr-2"><i class="fas fa-reply"></i> Reply</button>
+                                            </form>
+
+                                        </div>
+
+                                    </div>
+                                    <!-- /.card-footer -->
+                                </div>
+                                <!-- /.card -->
+                            }
                         </div>
                         <!-- /.col -->
                     </div>
