--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -92,15 +92,21 @@
                         <!-- Messages Dropdown Menu -->
                         @{
                             var userId = UserManager.GetUserId(User);
-                            var message = ApplicationDbContext.Inbox.Where(i => i.ReceiverId == userId || i.SenderId == userId).Where(i => i.IsSeenBySender == true).ToList();
+
+                            var replyParents = new List<int>();
+                            replyParents.AddRange(ApplicationDbContext.Reply.Where(r => r.ReceiverId == userId && r.IsSeen == false).Select(r => r.InboxId));
+                            var myNotifications = new List<Inbox>();
+                            myNotifications.AddRange(ApplicationDbContext.Inbox.Where(i => replyParents.Contains(i.Id) || (i.ReceiverId == userId && i.IsSeen == false)));
+
+                            var message = ApplicationDbContext.Inbox.Where(i => (i.ReceiverId == userId && i.IsSeen == false)).ToList();
                             var currentTime = DateTime.Now;
                         }
                         <li class="nav-item dropdown">
                             <a class="nav-link" data-toggle="dropdown" href="#">
                                 <i class="far fa-comments"></i>
-                                @if (message.Count != 0)
+                                @if (myNotifications.Count != 0)
                                 {
-                                    <span class="badge badge-danger navbar-badge">@message.Count</span>
+                                    <span class="badge badge-danger navbar-badge">@myNotifications.Count</span>
                                 }
                                 else
                                 {
@@ -110,7 +116,7 @@
                             </a>
                             <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
 
-                                @foreach (var mes in message)
+                                @foreach (var mes in myNotifications)
                                 {
                                     var timeSpan = currentTime.Subtract(mes.Created);
                                     var eslapseSecond = timeSpan.Seconds;
