--- a/Views/Inboxes/Index.cshtml
+++ b/Views/Inboxes/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model IEnumerable<BugTracker.Models.Inbox>
 @using BugTracker.Services
 @using Microsoft.AspNetCore.Identity
+@using BugTracker.Data
+@inject ApplicationDbContext ApplicationDbContext
 @inject UserManager<CustomUser> userManager 
 @{
     ViewData["Title"] = "Inbox";
@@ -104,7 +106,7 @@
 
                                                             <td class="mailbox-name">@((await userManager.FindByIdAsync(item.SenderId)).FullName)</td>
                                                             <td class="mailbox-subject">
-                                                                @if ((!item.IsSeen && item.ReceiverId == userId) || (item.SenderId == userId && item.Replies.FirstOrDefault(i => i.InboxId == item.Id).IsSeen == false))
+                                                                @if ((!item.IsSeen && item.ReceiverId == userId) || (item.SenderId == userId && !item.IsSeen && !item.Replies.FirstOrDefault(i => !i.IsSeen).IsSeen))
                                                                 {
                                                                     <p><b>@Html.DisplayFor(modelItem => item.Subject)</b></p>
                                                                 }
@@ -112,7 +114,7 @@
                                                                 {
                                                                     <p>@Html.DisplayFor(modelItem => item.Subject)</p>
                                                                 }
-
+                                                                @*item.Replies.FirstOrDefault(i => i.InboxId == item.Id).IsSeen == false*@
                                                             </td>
                                                             <td class="mailbox-date">@Html.DisplayFor(modelItem => item.Created)</td>
                                                             <td> <a asp-action="temporaryDelete" asp-route-id="@item.Id">Delete</a></td>
